sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_false_arrivalpos/errors.duarouter
Error: Invalid arrivalPos definition for vehicle '1';
 must be one of ("random", "max", or a float)
Quitting (on error).
